--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(labs3sem)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 
-add_executable(lab1.32 lab1.32/main.cpp lab1.32/lab1.32.h lab1.32/lab1.32.cpp)
+add_executable(lab1.1 lab1/1.32/main.cpp lab1/1.32/lab1.32.h lab1/1.32/lab1.32.cpp)
+add_executable(lab1.2 lab1/2.20/main.cpp lab1/2.20/lab2.20.h lab1/2.20/lab2.20.cpp)
