--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(labs3sem)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(lab1.1 lab1/1.32/main.cpp lab1/1.32/lab1.32.h lab1/1.32/lab1.32.cpp)
-add_executable(lab1.2 lab1/2.20/main.cpp lab1/2.20/lab2.20.h lab1/2.20/lab2.20.cpp)
+add_executable(lab1.1 lab1/lab1.32/main.cpp lab1/lab1.32/lab1.32.h lab1/lab1.32/lab1.32.cpp)
+add_executable(lab1.2 lab1/lab2.20/main.cpp lab1/lab2.20/lab2.20.h lab1/lab2.20/lab2.20.cpp)
